--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,7 +1,8 @@
-<nav>
+<nav *ngIf="user;">
   <ul>
     <li><a routerLink="">Home</a></li>
     <li><a routerLink="/members">Members</a></li>
+    <li><a (click)="logout()">Logout</a></li>
   </ul>
 </nav>
 <hr />
