--- a/src/app/pages/auth/auth.component.html
+++ b/src/app/pages/auth/auth.component.html
@@ -11,3 +11,4 @@
     <button class="btn btn-primary" [disabled]="!loginForm.valid">Login</button>
   </div>
 </form>
+<div *ngIf="loginMsg">Login Failed</div>
